# onetimesecret_app

./: .env_sample  .gitignore  Dockerfile  README.md  app.py  coverage_report.html  docker-compose.yml  pyproject.toml  settings.py
config/: middleware.py
database/: db.py
models/: secret.py  user.py
routers/: auth.py  secret.py  token.py  user.py
schemas/: auth.py  secret.py  token.py  user.py
services/: auth.py  secret.py  user.py
src/: celery_app.py  config.py  database.py  main.py  models.py
src/auth/: router.py  service.py
src/migrations/: env.py
src/migrations/versions/: bb49a0fae0fc_.py
src/secret/: models.py  router.py  schemas.py  service.py
src/user/: models.py  router.py  service.py
tasks/: tasks.py
tests/: conftest.py  test_auth.py  test_secret.py  test_user.py
