[tool.poetry]
name = "onetimesecret-app"
version = "0.1.0"
description = ""
authors = ["Olga Aukhadieva <sarole4ka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
flake8 = "^7.1.1"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
sqlalchemy = "^2.0.32"
asyncpg = "^0.29.0"
databases = "^0.9.0"
email-validator = "^2.2.0"
passlib = "^1.7.4"
pyjwt = "^2.9.0"
python-multipart = "^0.0.9"
cryptography = "^43.0.0"
celery = "^5.4.0"
redis = "^5.0.8"
flower = "^2.0.1"
python-dateutil = "^2.9.0.post0"
bcrypt = "^4.2.0"
fastapi-pagination = "^0.12.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
